<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/settings_email_header">

        <EditTextPreference
            app:key="@string/sp_email_address"
            app:title="@string/email_address_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:defaultValue="@string/default_email_subject"
            app:key="@string/sp_email_subject"
            app:title="@string/email_subject_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_regex_header">

        <EditTextPreference
            android:summary="@string/regex_summary"
            app:key="@string/sp_regex_string"
            app:title="@string/regex_string_title"
            app:useSimpleSummaryProvider="false" />

        <SwitchPreferenceCompat
            app:key="@string/sp_regex_enable"
            app:title="@string/regex_enable_title"

            />


    </PreferenceCategory>

</PreferenceScreen>